--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="/index.css">
 </head>
 <body>
-    
+    <div class="body">
+        <div class="navbar">
+            <img src="/logo.png" alt="">
+            <ul>
+                <li><a href="#"> Product</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Affiliate</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <main>
+            <div class="title">
+                Make Website 
+                <div class="div">
+                    <h3>Now</h3>
+                    <h3>Today</h3>
+                <h3>Free</h3>
+                </div>
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, labore maxime <br>  ex ad? Inventore ea asperiores vitae dolorem?
+            </p>
+            <button>Register Now To Know More</button>
+        </main>
+    </div>
 </body>
 </html>
